<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">FactoryTest</string>
    <string name="app_result">测试结果</string>
    <string name="but_test_all">全部测试</string>
    <string name="but_test_version">版本测试</string>
    <string name="but_test_color">LCD测试</string>
    <string name="but_test_touchpanel">触屏测试</string>
    <string name="but_test_gps">GPS测试</string>
    <string name="but_test_sd">SD卡测试</string>
    <string name="but_test_flashlight">闪光灯测试</string>
    <string name="but_test_camera">Camera测试</string>
    <string name="but_test_wifi">WiFi测试</string>
    <string name="but_test_bluetooth">蓝牙测试</string>
    <string name="but_test_backlight">背光测试</string>
    <string name="but_test_power">电源测试</string>
    <string name="but_test_keyboard">键盘测试</string>
    <string name="but_test_keyboard_ireadygo">按键摇杆测试</string>
    <string name="but_test_hdmi_ireadygo">HDMI测试</string>
    <string name="but_test_fm">FM测试</string>
    <string name="but_test_vibrate">震动测试</string>
    <string name="but_self_test">传感器校正</string>
    <string name="but_test_gravity_sensor">重力感应测试</string>
    <string name="but_test_magnetic_sensor">磁场感应测试</string>
    <string name="but_test_gyroscope_sensor_ireadygo">陀螺仪测试</string>
    <string name="but_test_light_sensor">光线感应测试</string>
    <string name="but_test_pressure_sensor">压力传感器测试</string>
    <string name="but_test_distance_sensor">距离感应测试</string>
    <string name="but_test_speaker">喇叭测试</string>
    <string name="but_test_earphone">耳机测试</string>
    <string name="but_test_sim">Sim卡</string>
    <string name="but_test_headset">听筒测试</string>
    <string name="but_test_mic">麦克风测试</string>
    <string name="but_test_imei">读写IMEI</string>
    <string name="but_test_phone">通话测试</string>
    <string name="but_test_adc">查看ADC值</string>
    <string name="but_test_aging">老化测试</string>
    <string name="btn_fail">失败</string>
    <string name="btn_succeed">成功</string>
    <string name="test_vibrate_ask">是否感觉到震动？</string>
    <string name="but_return">返回菜单</string>
    <string name="but_retest">重测本项</string>
    <string name="but_changecolor">改变颜色</string>
    <string name="but_next">下一项测试</string>
    <string name="but_exit">退出</string>
    <string name="but_camera_open">打开Camera</string>
    <string name="but_camera_exit">关闭Camera</string>
    <string name="but_wifi_open">打开WiFi</string>
    <string name="but_wifi_close">关闭WiFi</string>
    <string name="but_bluetooth_open">打开Bluetooth</string>
    <string name="but_bluetooth_close">关闭Bluetooth</string>
    <string name="but_mic_rec">开始录音</string>
    <string name="but_mic_stop">停止并播放</string>
    <string name="but_mic_no_sd">请插入SD卡</string>
    <string name="but_installer_change">安装器切换</string>
    <string name="test_sd_mess1">SD卡已经插入！</string>
    <string name="test_sd_mess2">SD卡已经拔出！</string>
    <string name="test_sd_mess3">在SD卡中创建文件成功！</string>
    <string name="test_sd_mess4">从SD卡中删除文件成功！</string>
    <string name="test_sd_mess5">在SD卡中创建文件失败！</string>
    <string name="test_sd_mess6">从SD卡中删除文件失败！</string>
    <string name="test_color_mess">请点击“改变颜色”，显示是否正常！</string>
    <string name="test_fm_play">播放</string>
    <string name="test_fm_stop">停止</string>
    <string name="test_fm_sound_spk">外放</string>
    <string name="test_fm_sound_ear">耳机</string>
    <string name="test_fm_searching">搜索中</string>
    <string name="test_fm_please_wait">请稍候</string>
    <string name="test_result">测试结果</string>
    <string name="test_fm_please_plug_earphone">请先插入耳机</string>
    <string name="test_camera_mess">请点击“打开Camera”，测试Camera是否正常！</string>
    <string name="test_wifi_mess">请点击“打开WiFi/关闭WiFi”，是否有正确的WiFi信息！</string>
    <string name="test_wifi_mess_enable">WiFi打开成功！</string>
    <string name="test_wifi_mess_disable">WiFi关闭成功！</string>
    <string name="test_wifi_mess_state_changed">WiFi状态改变！</string>
    <string name="test_wifi_mess_error">未知的WiFi状态！</string>
    <string name="test_bluetooth_mess">请点击“打开Bluetooth/关闭Bluetooth”，是否有正确的Bluetooth信息！</string>
    <string name="test_bluetooth_mess_error">未知的Bluetooth状态！</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="test_power_status">充电状态:</string>
    <string name="test_power_plug">Power Plug:</string>
    <string name="test_power_level">当前电量:</string>
    <string name="test_power_scale">电池电量:</string>
    <string name="test_power_health">电源状态:</string>
    <string name="test_power_voltage">当前电压:</string>
    <string name="test_power_temp">电源温度:</string>
    <string name="test_power_tech">电源技术:</string>
    <string name="test_power_time">自启动的时间:</string>
    <string name="test_keyboard_invalidkey">未知的按键:</string>
    <string name="test_keyboard_tip">按下需要测试的按键进行测试:</string>
    <string name="battery_info_status_label">"Battery status:"</string>
    <string name="battery_info_power_label">"Power plug:"</string>
    <string name="battery_info_scale_label">"Battery scale:"</string>
    <string name="battery_info_level_label">"Battery level:"</string>
    <string name="battery_info_health_label">"Battery health:"</string>
    <string name="battery_info_technology_label">"Battery technology:"</string>
    <string name="battery_info_voltage_label">"Battery voltage:"</string>
    <string name="battery_info_voltage_units">"mV"</string>
    <string name="battery_info_temperature_label">"Battery temperature:"</string>
    <string name="battery_info_temperature_units">"° C"</string>
    <string name="battery_info_uptime">"Time since boot:"</string>
    <string name="battery_info_awake_battery">"Awake time on battery:"</string>
    <string name="battery_info_awake_plugged">"Awake time when charging:"</string>
    <string name="battery_info_screen_on">"Screen ON time:"</string>
    <string name="battery_info_status_unknown">"Unknown"</string>
    <string name="battery_info_status_charging">"Charging"</string>
    <string name="battery_info_status_charging_ac">"(AC)"</string>
    <string name="battery_info_status_charging_usb">"(USB)"</string>
    <string name="battery_info_status_discharging">"Discharging"</string>
    <string name="battery_info_status_not_charging">"Not charging"</string>
    <string name="battery_info_status_full">"Full"</string>
    <string name="battery_info_power_unplugged">"Unplugged"</string>
    <string name="battery_info_power_ac">"AC"</string>
    <string name="battery_info_power_usb">"USB"</string>
    <string name="battery_info_power_ac_usb">"AC+USB"</string>
    <string name="battery_info_power_unknown">"Unknown"</string>
    <string name="battery_info_health_unknown">"Unknown"</string>
    <string name="battery_info_health_good">"Good"</string>
    <string name="battery_info_health_overheat">"Overheat"</string>
    <string name="battery_info_health_dead">"Dead"</string>
    <string name="battery_info_health_over_voltage">"Over voltage"</string>
    <string name="battery_info_health_unspecified_failure">"Unknown error"</string>
    <string name="test_wifi_opening">正在打开WiFi...</string>
    <string name="test_wifi_open">WiFi已打开.</string>
    <string name="test_wifi_close">WiFi已关闭.</string>
    <string name="test_wifi_invalid">WiFi设备不可用.</string>
    <string name="test_wifi_no_network">找不到WiFi网络.</string>
    <string name="test_wifi_signal">信号强度:</string>
    <string name="test_bt_opening">正在打开蓝牙...</string>
    <string name="test_bt_searching">蓝牙打开成功，且正在搜索周边可检测蓝牙设备...</string>
    <string name="test_bt_searched">蓝牙打开成功，且搜索完成！</string>
    <string name="test_bt_invalid">蓝牙功能不可用.</string>
    <string name="test_bt_no_devices">周边没有其他可检测的蓝牙设备.</string>
    <string name="test_gps_close">GPS功能已关.</string>
    <string name="test_gps_location_fail">GPS定位失败!</string>
    <string name="test_gps_number">GPS星数 : </string>
    <string name="test_gps_latitude">所在纬度 : </string>
    <string name="test_gps_longitude">所在经度 : </string>
    <string name="test_gps_speed">速度 : </string>
    <string name="test_gps_bear">方位 : </string>
    <string name="test_gps_altitude">海拔: </string>
    <string name="test_gps_satellite_id">卫星号:</string>
    <string name="test_hdmi_dialogInfo">HDMI是在正常输出？</string>
    <string name="test_gps_search">正在搜索GPS... </string>
    <string name="test_gps_searchfinish">你所在的经纬度位置: </string>
    <string name="test_gps_open_please">请开启GPS进行测试</string>
    <string name="test_gps_open_or_not">是否开启GPS</string>
    <string name="test_gps_open_OK">开启</string>
    <string name="test_gps_open_Cancel">取消</string>
    <string name="test_touchpanel_result">测试的结果是否通过?</string>
    <string name="test_touchpanel_yes">通过</string>
    <string name="test_touchpanel_no">未通过</string>
    <string name="test_sim_state">Sim卡状态: </string>
    <string name="test_sim_state_ok">良好</string>
    <string name="test_sim_state_unknow">sim卡被锁或者其他未知状态</string>
    <string name="test_sim_state_absent">sim卡未插入</string>
    <string name="test_sim1">卡1信息:</string>
    <string name="test_sim2">卡2信息:</string>
    <string name="test_sim_imei">IMEI: </string>
    <string name="test_sim_serialnumber">ICCID: </string>
    <string name="test_sim_operator">运营商代号: </string>
    <string name="test_sim_operatorname">运营商名称: </string>
    <string name="test_sim_operatorname_telecom">中国电信 </string>
    <string name="test_sim_operatorname_unicom">中国联通 </string>
    <string name="test_sim_operatorname_mobile">中国移动 </string>
    <string name="test_sim_line1number">号码: </string>
    <string name="test_sound_ask">是否听到音乐？</string>
    <string name="test_sound_earphone_out">没有插入耳机</string>
    <string name="test_sound_earphone_in">耳机已插入</string>
    <string name="test_autotesting">自动测试中,需长按返回键才能退出。</string>
    <string name="test_passivetest">被动测试项</string>
    <string name="test_activetest">主动测试项</string>
    <string name="test_camera_capture">拍照</string>
    <string name="test_camera_frontcamera">前摄像头</string>
    <string name="test_camera_backcamera">后摄像头</string>
    <string name="test_color_changecolor">点击屏幕切换颜色</string>
    <string name="test_earphone_testing">耳机测试中...</string>
    <string name="test_flashlight_test">闪光灯测试</string>
    <string name="test_flashlight_close">关闭</string>
    <string name="test_flashlight_open">打开</string>
    <string name="test_fm_leftarrow">&lt;&lt;</string>
    <string name="test_fm_rightarrow">>></string>
    <string name="test_fm_test">FM测试</string>
    <string name="test_fm_open">打开FM</string>
    <string name="test_gps_time">00:00</string>
    <string name="test_mic_testing">话筒测试中...</string>
    <string name="test_sd_write">请输入信息，并点击保存按钮，将信息保存到SD卡上。然后点击查看按钮可查看文本。测试成功后，点击删除按钮删除文本.</string>
    <string name="test_sd_save">保存文件</string>
    <string name="test_sd_show">显示文件</string>
    <string name="test_sd_delete">删除文件</string>
    <string name="test_clear_data">清除数据</string>
    <string name="test_led">LED测试</string>
    <string name="test_led_single">LED单项测试</string>
    <string name="aging_test_tip">"
1. Usb must be connected
2. Select:Settings > Developer options > Stay Awake
3. Do not press any keys on the device while the AgingTest is running"</string>
    <string name="vibrate_title">Vibrate</string>
    <string name="receiver_title">Receiver</string>
    <string name="front_taking_picture_title">Front taking picture</string>
    <string name="back_taking_picture_title">Back taking picture</string>
    <string name="play_video_title">Play video</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="test_title">Test title:</string>
    <string name="test_time_title">Test time:</string>
    <string name="falsh_title">Flash</string>
    <string name="torch_title">Torch</string>
    <string name="camera_motor_test_title">Camera Motor</string>
    <string name="flashlight_title">FlashLight</string>
    <string name="loudspeaker_title">LoudSpeaker</string>
    <string name="tp_test_title">TP Test</string>
    <string name="select_all">Select All</string>
</resources>