<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/root_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <VideoView
        android:id="@id/video_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="bottom|center_horizontal"
        android:background="#00000000"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_title"
            android:textSize="@dimen/test_time_title_size" />

        <TextView
            android:id="@+id/test_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/test_time_margin_top"
            android:textColor="@color/test_time_color"
            android:textSize="@dimen/test_time_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_time_title"
            android:textSize="@dimen/test_time_title_size" />

        <TextView
            android:id="@id/test_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/test_time_margin_top"
            android:textColor="@color/test_time_color"
            android:textSize="@dimen/test_time_size" />

        <Button
            android:id="@id/stop_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/stop_test_margin_top"
            android:text="@string/stop" />
    </LinearLayout>
</FrameLayout>